<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".image.ImageActivity"
    >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:orientation="vertical"
       >
      <ImageView
          android:id="@+id/ivNormal"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:scaleType="fitXY"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/normal_image"
          android:textColor="@android:color/white"
          />
      <ImageView
          android:id="@+id/ivCircle"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:layout_marginTop="10dp"
          android:scaleType="centerCrop"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/circle_image"
          android:textColor="@android:color/white"
          />
      <ImageView
          android:id="@+id/ivRound"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:layout_marginTop="10dp"
          android:scaleType="centerCrop"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/round_image"
          android:textColor="@android:color/white"
          />
      <FrameLayout
          android:id="@+id/flLayout"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:layout_marginTop="10dp"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/view_image"
          android:textColor="@android:color/white"
          />
      <ImageView
          android:id="@+id/ivAuto"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:scaleType="centerCrop"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/auto_image"
          android:textColor="@android:color/white"
          />
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:onClick="download"
          android:text="@string/download"
          />
      <TextView
          android:id="@+id/tvDownload"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
      <ImageView
          android:id="@+id/ivDownload"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:scaleType="centerCrop"
          />
   </LinearLayout>
</ScrollView>