<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".logger.LoggerActivity"
    >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="20dp"
       >
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="debug"
          android:text="@string/debug_logger"
          />

      <TextView
          android:id="@+id/tvDebug"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:textColor="@android:color/white"
          />

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="write"
          android:text="@string/write_logger"
          />

      <TextView
          android:id="@+id/tvContent"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:textColor="@android:color/white"
          />

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="upload"
          android:text="@string/upload_logger"
          />

      <TextView
          android:id="@+id/tvResult"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:textColor="@android:color/white"
          />
   </LinearLayout>
</ScrollView>